syntax = "proto3";

package hello;
option go_package = "github.com/meeranh/protobuf";

message HelloRequest {
	string my_name = 1;
}

message HelloResponse {
	string greeting = 1;
}

service HelloService {
	rpc Hello(HelloRequest) returns (HelloResponse);
}
